...
                                    <rect key="frame" x="0.0" y="0.0" width="567" height="65.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="eEv-A7-P1A">
                                            <rect key="frame" x="8" y="8" width="551" height="50"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" misplaced="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gLc-Mm-eRH">
                                                    <rect key="frame" x="0.0" y="0.0" width="48" height="21"/>
                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x9j-iA-a8f">
                                                    <rect key="frame" x="0.0" y="36" width="35" height="15"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="O0d-AE-6iC" id="5JD-Kj-y5c"/>
                            <outlet property="delegate" destination="O0d-AE-6iC" id="zVI-oJ-6zl"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Annotation" id="dIs-T9-Pzw">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="WLY-aj-z9g">
                            <connections>
                                <segue destination="vzS-Qc-gYY" kind="presentation" identifier="AddEvent" id="Dzc-fu-cIY"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                        <rect key="frame" x="0.0" y="180" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r4X-Nx-dyp" id="bJF-q2-nu2">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="Area" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CIZ-xS-L8E">
                                                    <rect key="frame" x="15" y="12" width="36" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KqC-eT-PaO">
...
