...
    var managedContext: NSManagedObjectContext!
    @IBOutlet weak var mapView: MKMapView!
    @IBOutlet weak var dateSlider: UISlider!
    @IBOutlet weak var minYearLabel: UILabel!
    
    @IBOutlet weak var maxYearLabel: UILabel!
    @IBOutlet weak var alphaSlider: UISlider!
    @IBOutlet weak var startDateLabel: UILabel!
    @IBOutlet weak var chooseDateTextField: UITextField!
    @IBOutlet weak var endDateLabel: UILabel!

    @IBOutlet weak var containerView: UIView!
    

    let locationManager = CLLocationManager()
    
    var resultSearchController: UISearchController? = nil
//    var historyMap = HistoryMap()
    var overlayView: HistoryMapOverlayView?
    var historyMapImage: UIImage?

    var data: [String] = []
    var alpha = ["0.0", "0.1","0.2","0.3","0.4", "0.5", "0.6",  "0.7", "0.8", "0.9", "1.0"]
    var picker = UIPickerView()
    
...
