...
    var barButtonItem: UIBarButtonItem = UIBarButtonItem()
    var links: NSOrderedSet = NSOrderedSet()
    var array = [String]()
    
    var rightItem: String = "" {
        didSet {
            if rightItem == "Add" {
                barButtonItem = UIBarButtonItem(title: "Add", style: .Plain, target: self, action: #selector(LinksTableViewController.addNewLink))
            } else if rightItem == "Done" {
                barButtonItem = UIBarButtonItem(title: "Done", style: .Done, target: self, action: #selector(LinksTableViewController.saveNewLink))
            }
            self.navigationItem.rightBarButtonItem = barButtonItem
        }
...
